# fireworks

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  release.yml
scripts/: build_web.sh  capture_screenshots.sh
src/: main.rs
web/: index.html
